Fix nav overflow issues

--- a/src/app/about-me-social-media/about-me-social-media.component.css
+++ b/src/app/about-me-social-media/about-me-social-media.component.css
@@ -1,5 +1,9 @@
-.social-media-container {
+.container {
     width: 300px;
+    box-sizing: border-box;
+}
+
+.social-media-container {
     min-height: 400px;
     overflow: hidden;
     display: flex;
