--- a/src/app/blog-meta/blog-meta.component.css
+++ b/src/app/blog-meta/blog-meta.component.css
@@ -1,5 +1,9 @@
 .container {
     width: 300px;
+    box-sizing: border-box;
+}
+
+.sub-container {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
