--- a/src/app/blog-nav/blog-nav.component.css
+++ b/src/app/blog-nav/blog-nav.component.css
@@ -1,5 +1,6 @@
-.container {
+.container { 
     width: 300px;
+    box-sizing: border-box;
 }
 
 .tree-root {
