--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -9,7 +9,6 @@
 }
 
 .side-bar {
-    width: 300px;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
